--- a/crypto/btc-to-usd/index.html
+++ b/crypto/btc-to-usd/index.html
@@ -101,10 +101,10 @@
             <div class="section">
                 <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
                 <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                    <p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+                    <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
 <p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
-<p><a href="/currency/nok-to-usd" style="color: var(--primary-color); text-decoration: underline;">NOK to USD Rate</a></p>
+<p><a href="/currency/sgd-to-usd" style="color: var(--primary-color); text-decoration: underline;">SGD to USD Rate</a></p>
                     <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
                             Crypto Converter Hub</a></p>
                 </div>
