--- a/currency/cad-to-gbp/index.html
+++ b/currency/cad-to-gbp/index.html
@@ -149,9 +149,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-cny" style="color: var(--primary-color); text-decoration: underline;">USD to CNY Rate</a></p>
-<p><a href="/currency/chf-to-usd" style="color: var(--primary-color); text-decoration: underline;">CHF to USD Rate</a></p>
-<p><a href="/currency/krw-to-usd" style="color: var(--primary-color); text-decoration: underline;">KRW to USD Rate</a></p>
+                <p><a href="/currency/krw-to-usd" style="color: var(--primary-color); text-decoration: underline;">KRW to USD Rate</a></p>
+<p><a href="/currency/gbp-to-usd" style="color: var(--primary-color); text-decoration: underline;">GBP to USD Rate</a></p>
+<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
 <p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
