--- a/currency/dkk-to-usd/index.html
+++ b/currency/dkk-to-usd/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-dkk" style="color: var(--primary-color); text-decoration: underline;">USD to DKK Rate</a></p>
-<p><a href="/currency/inr-to-usd" style="color: var(--primary-color); text-decoration: underline;">INR to USD Rate</a></p>
-<p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
-<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
+                <p><a href="/currency/usd-to-nzd" style="color: var(--primary-color); text-decoration: underline;">USD to NZD Rate</a></p>
+<p><a href="/currency/usd-to-dkk" style="color: var(--primary-color); text-decoration: underline;">USD to DKK Rate</a></p>
+<p><a href="/currency/eur-to-jpy" style="color: var(--primary-color); text-decoration: underline;">EUR to JPY Rate</a></p>
+<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
