--- a/currency/eur-to-dkk/index.html
+++ b/currency/eur-to-dkk/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/sek-to-usd" style="color: var(--primary-color); text-decoration: underline;">SEK to USD Rate</a></p>
-<p><a href="/currency/chf-to-eur" style="color: var(--primary-color); text-decoration: underline;">CHF to EUR Rate</a></p>
-<p><a href="/currency/usd-to-inr" style="color: var(--primary-color); text-decoration: underline;">USD to INR Rate</a></p>
-<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
+                <p><a href="/currency/eur-to-chf" style="color: var(--primary-color); text-decoration: underline;">EUR to CHF Rate</a></p>
+<p><a href="/currency/cad-to-eur" style="color: var(--primary-color); text-decoration: underline;">CAD to EUR Rate</a></p>
+<p><a href="/currency/chf-to-usd" style="color: var(--primary-color); text-decoration: underline;">CHF to USD Rate</a></p>
+<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
