--- a/currency/usd-to-krw/index.html
+++ b/currency/usd-to-krw/index.html
@@ -150,8 +150,8 @@
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
                 <p><a href="/currency/usd-to-aud" style="color: var(--primary-color); text-decoration: underline;">USD to AUD Rate</a></p>
-<p><a href="/currency/usd-to-eur" style="color: var(--primary-color); text-decoration: underline;">USD to EUR Rate</a></p>
-<p><a href="/currency/usd-to-sgd" style="color: var(--primary-color); text-decoration: underline;">USD to SGD Rate</a></p>
+<p><a href="/currency/usd-to-zar" style="color: var(--primary-color); text-decoration: underline;">USD to ZAR Rate</a></p>
+<p><a href="/currency/cny-to-usd" style="color: var(--primary-color); text-decoration: underline;">CNY to USD Rate</a></p>
 <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
