--- a/currency/usd-to-nzd/index.html
+++ b/currency/usd-to-nzd/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-nok" style="color: var(--primary-color); text-decoration: underline;">USD to NOK Rate</a></p>
-<p><a href="/currency/aud-to-gbp" style="color: var(--primary-color); text-decoration: underline;">AUD to GBP Rate</a></p>
-<p><a href="/currency/usd-to-hkd" style="color: var(--primary-color); text-decoration: underline;">USD to HKD Rate</a></p>
-<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+                <p><a href="/currency/eur-to-gbp" style="color: var(--primary-color); text-decoration: underline;">EUR to GBP Rate</a></p>
+<p><a href="/currency/usd-to-zar" style="color: var(--primary-color); text-decoration: underline;">USD to ZAR Rate</a></p>
+<p><a href="/currency/dkk-to-eur" style="color: var(--primary-color); text-decoration: underline;">DKK to EUR Rate</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
