--- a/time-zone/ct-to-gmt/index.html
+++ b/time-zone/ct-to-gmt/index.html
@@ -122,9 +122,9 @@
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
                 <p><a href="/time-zone/jst-to-pst" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Pacific Time (PT)</a></p>
-<p><a href="/time-zone/aet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Pacific Time (PT)</a></p>
-<p><a href="/time-zone/cet-to-cst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to China Standard Time (CST)</a></p>
-<p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
+<p><a href="/time-zone/pst-to-est" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/cet-to-est" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Eastern Time (ET)</a></p>
+<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
